--- a/多項式回帰.ipynb
+++ b/多項式回帰.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "199c4f4a",
+   "id": "92e083d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "550c02de",
+   "id": "40ede5f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca69d86e",
+   "id": "880c8c35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.01, 1.25, 3.39, 5.8 , 1.83, 0.15, 1.44, 5.69, 0.98, 1.31])"
+       "array([ 3.45, -0.5 ,  2.99,  0.36,  1.28,  1.65,  0.93,  5.57,  1.38,\n",
+       "        5.14])"
       ]
      },
      "execution_count": 3,
@@ -53,22 +54,22 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c4f35519",
+   "id": "5488e275",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.59, 0.35, 0.2 , 0.08, 0.01],\n",
-       "       [0.33, 0.11, 0.03, 0.4 , 0.16],\n",
-       "       [0.73, 0.53, 0.39, 0.1 , 0.01],\n",
-       "       [0.98, 0.97, 0.95, 0.3 , 0.09],\n",
-       "       [0.44, 0.19, 0.09, 0.73, 0.54],\n",
-       "       [0.2 , 0.04, 0.01, 0.91, 0.84],\n",
-       "       [0.46, 0.21, 0.1 , 0.59, 0.35],\n",
-       "       [0.97, 0.94, 0.91, 0.76, 0.57],\n",
-       "       [0.27, 0.07, 0.02, 0.45, 0.21],\n",
-       "       [0.37, 0.14, 0.05, 0.61, 0.37]])"
+       "array([[0.76, 0.57, 0.43, 0.56, 0.31],\n",
+       "       [0.02, 0.  , 0.  , 0.92, 0.85],\n",
+       "       [0.72, 0.52, 0.37, 0.53, 0.29],\n",
+       "       [0.03, 0.  , 0.  , 0.96, 0.92],\n",
+       "       [0.54, 0.29, 0.16, 0.17, 0.03],\n",
+       "       [0.44, 0.19, 0.08, 0.11, 0.01],\n",
+       "       [0.35, 0.13, 0.04, 0.63, 0.39],\n",
+       "       [0.93, 0.87, 0.81, 0.14, 0.02],\n",
+       "       [0.55, 0.3 , 0.16, 0.26, 0.07],\n",
+       "       [0.94, 0.88, 0.83, 0.44, 0.2 ]])"
       ]
      },
      "execution_count": 4,
@@ -87,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0c723964",
+   "id": "e46b3b18",
    "metadata": {},
    "outputs": [
     {
@@ -108,14 +109,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "718d3f90",
+   "id": "b1d1c88a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beta hat:  [ 1.62  1.57  2.81  0.22 -0.69]\n",
+      "Beta hat:  [ 1.88  1.49  2.51  0.29 -0.84]\n",
       "Beta true:  [ 2.   1.   3.   0.  -0.5]\n"
      ]
     }
@@ -129,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "721fb15e",
+   "id": "cd93c470",
    "metadata": {},
    "outputs": [],
    "source": []
